Added missing dep

--- a/dorfladen-frontend/package.json
+++ b/dorfladen-frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.1.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@picocss/pico": "^1.4.2",
+    "jsbarcode": "^3.11.5",
     "luxon": "^2.2.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -30,6 +31,7 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jsbarcode": "^3.11.1",
     "@types/luxon": "^2.0.8",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
