--- a/dorfladen-frontend/package.json
+++ b/dorfladen-frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "@angular/service-worker": "~13.1.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@picocss/pico": "^1.4.2",
     "jsbarcode": "^3.11.5",
