Added lib check skip

--- a/dorfladen-backend/tsconfig.json
+++ b/dorfladen-backend/tsconfig.json
@@ -5,6 +5,7 @@
 		"rootDirs": ["./src", "./migrations"],
 		"outDir": "../dist",
 		"esModuleInterop": true,
-		"strict": true
+		"strict": true,
+		"skipLibCheck": true
 	}
 }
