--- a/dorfladen-frontend/package.json
+++ b/dorfladen-frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "patch-package"
   },
   "private": true,
   "dependencies": {
@@ -21,8 +22,11 @@
     "@angular/service-worker": "~13.1.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@picocss/pico": "^1.4.2",
+    "brotli-wasm": "^1.1.0",
     "jsbarcode": "^3.11.5",
+    "jsqr": "^1.4.0",
     "luxon": "^2.2.0",
+    "qrcode": "^1.5.0",
     "rxjs": "~7.5.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,12 +39,17 @@
     "@types/jsbarcode": "^3.11.1",
     "@types/luxon": "^2.0.8",
     "@types/node": "^17.0.5",
+    "@types/qrcode": "^1.4.2",
+    "crypto-browserify": "^3.12.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "patch-package": "^6.4.7",
+    "path-browserify": "^1.0.1",
+    "stream-browserify": "^3.0.0",
     "typescript": "~4.5.2"
   }
 }
