--- a/dorfladen-frontend/package.json
+++ b/dorfladen-frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
+    "@angular/animations": "^13.1.1",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
@@ -22,6 +22,7 @@
     "@angular/service-worker": "~13.1.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@picocss/pico": "^1.4.2",
+    "angular-animations": "^0.11.0",
     "brotli-wasm": "^1.1.0",
     "jsbarcode": "^3.11.5",
     "jsqr": "^1.4.0",
