--- a/dorfladen-backend/package.json
+++ b/dorfladen-backend/package.json
@@ -16,6 +16,7 @@
 		"connect-session-knex": "^2.0.0",
 		"cookie-parser": "^1.4.5",
 		"express": "^4.17.1",
+		"express-rate-limit": "^6.0.4",
 		"express-session": "^1.17.1",
 		"express-validator": "^6.10.0",
 		"knex": "^0.95.4",
@@ -30,6 +31,7 @@
 	"devDependencies": {
 		"@types/cookie-parser": "^1.4.2",
 		"@types/express": "^4.17.11",
+		"@types/express-rate-limit": "^5.1.3",
 		"@types/express-session": "^1.17.3",
 		"@types/express-validator": "^3.0.0",
 		"@types/mongoose": "^5.10.4",
